<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/about"
    >

    <PreferenceCategory app:key="about">

        <PreferenceScreen
            android:icon="@mipmap/ic_launcher"
            android:summary="@string/app_fullname"
            android:title="@string/app_name" />

        <PreferenceScreen
            android:key="version"
            android:summary="4.0"
            android:title="Version" />

        <PreferenceScreen
            android:summary="Copyright 2018 NECTEC, Apache-2.0"
            android:title="@string/copyright">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/ffc-nectec/android/blob/master/LICENSE" />
        </PreferenceScreen>

        <PreferenceScreen
            android:icon="@drawable/ic_group_black_24dp"
            android:summary="FFC เป็นโครงการ Open Source รอคุณมาร่วมกันพัฒนาให้ดียิ่งขึ้น"
            android:title="@string/contribution">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/ffc-nectec/" />
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="contract_us"
        app:title="@string/contract_us">

        <Preference android:title="Website">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://ffc.in.th/" />
        </Preference>

        <Preference
            android:summary="ติดตามข้อมูลข่าวสารใหม่ๆ หรือสอบถามปัญหาต่างๆ"
            android:title="Facebook">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.facebook.com/FFC.NECTEC/" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_legal">

        <Preference
            android:key="terms"
            app:title="@string/terms_of_use"/>

        <Preference
            android:key="privacy"
            app:title="@string/privacy_policy"/>

        <Preference
            android:key="license"
            app:title="@string/open_source_license"/>

    </PreferenceCategory>

</PreferenceScreen>
