<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 NECTEC
  ~   National Electronics and Computer Technology Center, Thailand
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_map_color_24dp"
            android:title="@string/main_page" />
        <item
            android:id="@+id/nav_achivement"
            android:icon="@drawable/ic_award_color_24dp"
            android:title="@string/achievement" />

        <item
            android:id="@+id/nav_follow"
            android:icon="@drawable/ic_rss_color_24dp"
            android:title="@string/follow" />
        <item
            android:id="@+id/nav_manual"
            android:icon="@drawable/ic_manual_color_24dp"
            android:title="@string/manual" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_information_color_24dp"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_color_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_color_24dp"
            android:title="@string/action_logout" />
    </group>
</menu>
