<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:contentScrim="@color/colorPrimary"
        app:expandedTitleMargin="16dp"
        app:expandedTitleTextAppearance="?android:attr/textAppearanceLarge"
        app:layout_scrollFlags="scroll"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <ImageView
            android:id="@+id/toolbarImage"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="?android:actionBarSize"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/detail_header"

            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7"
            tools:targetApi="lollipop" />

        <ImageButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_circle_white"
            android:minWidth="?android:actionBarSize"
            android:padding="8dp"
            app:layout_collapseMode="pin" />

        <ImageButton
            android:id="@+id/homeAsUp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="?android:actionBarSize"
            android:layout_gravity="start|top"
            android:layout_marginTop="3dp"
            android:minWidth="?android:actionBarSize"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:maxLines="1"
                android:text="@string/MeasurePressure"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:autoSizeMaxTextSize="24sp"
                app:autoSizeStepGranularity="2sp"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_label_dark"
                    android:padding="2dp"
                    android:text="@string/dead"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connectionstatus" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_connectionstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deviceid" />

        <TextView
            android:id="@+id/textView_deviceid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"

            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hwversion" />

        <TextView
            android:id="@+id/textView_hwversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swversion" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_swversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"

            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"

            android:id="@+id/textView_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"

            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nibpaction" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sys" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_sys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pulse" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/realtime" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_realtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errorcode" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spo2" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_spo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pr" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_pr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pi" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_pi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wave_data" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:id="@+id/textView_wave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_connect"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connect"
            tools:ignore="ButtonStyle" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_disconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disconnect"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_deviceid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/getdeviceid"
            tools:ignore="ButtonStyle" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/getinformation"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/button_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/start_nibp" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/button_stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/stop_nibp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close" />
    </LinearLayout>
</LinearLayout>
