<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/content_start_horizontal_padding"
    android:paddingEnd="@dimen/content_start_horizontal_padding"
    tools:context="ffc.app.auth.fragment.LoginOrgFragment"
    tools:ignore="UselessParent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/application_logo"
        android:src="@drawable/logo_home" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:text="@string/app_fullname"
        android:textColor="@color/text_primary_inverse"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/text_primary_inverse"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutOrganization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:theme="@style/TextLabel"
        android:transitionGroup="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etOrganization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:hint="@string/organization"
            android:textColor="@color/text_primary_inverse"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnNext"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:visibility="gone" />

</LinearLayout>
